# meson-playground

./: .gitignore  README.md
subproject-example/: README.md
wrap-example/: README.md  meson.build
wrap-example/include/: LocalLib.hpp
wrap-example/src/: LocalLib.cpp  main.cpp
wrap-example/subprojects/: ExternalLib.wrap
